# zmora-server

./: .gitignore  LICENSE  stack.yaml  zmora-server.cabal
app/: FeedQueue.hs  LookupQueue.hs  Main.hs
src/: Api.hs  Controller.hs  Fake.hs  Lib.hs  MockAPI.hs  Models.hs  Queue.hs  Server.hs  Types.hs
src/Controllers/: Auth.hs  Contest.hs  Permission.hs  Problem.hs  Submit.hs  Time.hs  User.hs
src/Models/: Derivates.hs  Group.hs  SubmitStatus.hs  Task.hs
src/Queue/: AMQP.hs  Defs.hs  Publisher.hs  Serialization.hs
src/Queue/old/: Publisher.hs  Subscriber.hs
src/Utils/: AesonTrim.hs  Controller.hs  ExtensibleRecords.hs  ResourceAPI.hs
