name:                zmora-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zmora-agh/zmora-server#readme
license:             BSD3
license-file:        LICENSE
author:              Zmora team
maintainer:          korri@student.agh.edu.pl
copyright:           2017 Zmora team
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Fake, MockAPI, Models
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant
                     , servant-server
                     , wai
                     , warp
                     , faker
                     , lens
                     , persistent
                     , persistent-template
                     , transformers
                     , text
  default-language:    Haskell2010

executable zmora-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zmora-server
  default-language:    Haskell2010

test-suite zmora-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zmora-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmora-agh/zmora-server
