name:                zmora-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/zmora-agh/zmora-server#readme
license:             BSD3
license-file:        LICENSE
author:              Zmora team
maintainer:          korri@student.agh.edu.pl
copyright:           2017 Zmora team
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                     , Controller
                     , Server
                     , Types
                     , Models, Models.Group, Models.Task
                     , Queue
                     , Queue.AMQP, Queue.Serialization, Queue.Defs
                     , Utils.AesonTrim
                     , Utils.ExtensibleRecords
                     , Utils.Controller
                     , Controllers.Auth
                     , Controllers.Contest
                     , Controllers.Permission
                     , Controllers.Problem
                     , Controllers.Submit
                     , Controllers.Time
                     , Controllers.User

  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , amqp
                     , bytestring
                     , cryptohash
                     , data-msgpack
                     , diener
                     , either
                     , esqueleto
                     , ghc-prim
                     , hashable
                     , hashable-time
                     , lens
                     , lifted-base
                     , mtl
                     , natural-transformation
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , QuickCheck
                     , reflection
                     , scrypt
                     , servant
                     , servant-auth
                     , servant-auth-server
                     , servant-multipart
                     , servant-server
                     , template-haskell
                     , text
                     , time
                     , transformers
                     , type-level-sets
                     , unordered-containers
                     , wai
                     , wai-cors
                     , wai-logger
                     , warp
                     , containers
  default-language:    Haskell2010

executable zmora-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , zmora-server
  default-language:    Haskell2010

executable zmora-feed-queue
  hs-source-dirs:      app
  main-is:             FeedQueue.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amqp
                     , bytestring
                     , zmora-server
  default-language:    Haskell2010

executable zmora-lookup-queue
  hs-source-dirs:      app
  main-is:             LookupQueue.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , amqp
                     , bytestring
                     , data-msgpack
                     , text
                     , zmora-server
  default-language:    Haskell2010


test-suite zmora-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , zmora-server
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/zmora-agh/zmora-server
